src/objects/CR_Participant__c.object
<CustomObject>
    <description>Participants for this change -  A subset of Project Participants</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CR Participants</relationshipLabel>
        <relationshipName>CR_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_Steps_Working_On__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CR Steps Id Working On</label>
        <referenceTo>CR_Step__c</referenceTo>
        <relationshipLabel>CR Participants</relationshipLabel>
        <relationshipName>CR_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chage_Request__c</fullName>
        <label>Chage Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>CR Participants</relationshipLabel>
        <relationshipName>CR_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CR Participants</relationshipLabel>
        <relationshipName>CR_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_CR_Step_Number__c</fullName>
        <description>Which CR Step are you currently working on?</description>
        <inlineHelpText>Which CR Step are you currently working on?</inlineHelpText>
        <label>Current CR Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>CR Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Approver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CR Participant</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>